--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     display: grid;
     align-items: center;
     justify-items: center;
+    background-color: #F6F6F6;
 }
 
 body > .main {
@@ -28,10 +29,48 @@ body > .main {
   border: 4px solid black;
   cursor: pointer;
   transition: all 100ms ease-in-out;
-  background-color: white;
+  background-color: #F6F6F6;
 }
 
 .btn-choice:hover{
     color: #FFFFFF;
     background-color: #000000;
+  
    }
+
+.reset-btn {
+    height: 150px;
+    width: 150px;
+    margin: 100px;
+    padding: 50px;
+    border: 6px solid #000000;
+    border-radius: 50%;
+    box-shadow: 10px 20px 5px #000000;
+    transition: all 400ms ease-out;
+}
+
+.reset-btn:hover{
+    color: #F6F6F6;
+    background-color: #000000;
+    cursor: grab;
+    box-shadow: 10px 20px 10px #FFFFFF;
+    transform: translate(10px, 5%);
+    border: 6px solid #F6F6F6;
+}
+
+#rick{
+    width: 200px;
+    height: 200px;
+    background: url(./image/rickandmorty\ \(1\).png);
+    animation: runRick 1.0s steps(6) infinite;
+    border: 9px solid #000000;
+}
+
+@keyframes runRick {
+    0% {
+        background-position: 0px ;
+    }
+    100% {
+        background-position: -700px;
+    }
+}
